--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokenizers = {version = "0.21.0", default-features = false, features = [
 derive-new = "0.7.0"
 csv = "1.3.1"
 rand = "0.8.5"
+itertools = "0.14.0"
